--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     </li>
 </ul>
     <div class="header">
-        <h1>WELCOME TO EMR!!!</h1>
+        <marquee behavior="" direction="left"><h1>WELCOME TO EMR!!!</h1></marquee>
         <p>bienvenue sur le site Lafinesse Tech, nous avons hâte de mieux vous servir.</p>
   </div>
 <div class="navbar">
