menu bar adjusted

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
 <div class="menu-bar">
+    <img src="images/logo.png" class="logo">
 <ul>
     <li class="active"><a href="#"><i class="fa fa-home"></i>Home</a></li>
     <li><a href="#"><i class="fa fa-user"></i>About</a>
@@ -46,6 +47,7 @@
 
     </li>
 </ul>
+</div>
     <div class="header">
         <marquee behavior="" direction="left"><h1>WELCOME TO EMR!!!</h1></marquee>
         <p>bienvenue sur le site Lafinesse Tech, nous avons hâte de mieux vous servir.</p>
