Adeed swiper and images

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 <!-- Additional required wrapper -->
                 <div class="swiper-wrapper">
                   <!-- Slides -->
-                  <div class="swiper-slide"><img src="images/emr slider 1.avif"></div>
+                  <div class="swiper-slide"><img src="images/b1-1.jpg  "></div>
                   <div class="swiper-slide"><img src="images/slider2.jpg"></div>
                   <div class="swiper-slide"><img src="images/slider3.jpg" ></div> 
                 </div>
@@ -86,5 +86,28 @@
 </div>
 
 <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
+
+<script>
+const swiper = new Swiper('.swiper', {
+    autoplay:{
+        delay:3000,
+        disableonInteraction: false,
+    },
+ 
+  loop: true,
+
+  pagination: {
+    el: '.swiper-pagination',
+    clickable: true,
+  },
+
+  navigation: {
+    nextEl: '.swiper-button-next',
+    prevEl: '.swiper-button-prev',
+  },
+
+});
+
+</script>
 </body>
 </html>
