added article and content

--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
 </div>
     <div class="header">
         <marquee behavior="" direction="left"><h1>WELCOME TO EMR!!!</h1></marquee>
-        <p>bienvenue sur le site Lafinesse Tech, nous avons hâte de mieux vous servir.</p>
-  </div>
+        <p>bienvenue sur le site EMR, nous avons hâte de mieux vous servir.</p>
+    </div>
         <div class="container">
             <div class="swiper">
                 <!-- Additional required wrapper -->
@@ -73,11 +73,9 @@
                 <div class="swiper-button-next"></div>
 
               </div>
-
-
-
         </div>
 </div>
+
 
 <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
 
@@ -101,7 +99,22 @@ const swiper = new Swiper('.swiper', {
   },
 
 });
-
 </script>
+<br><br><br><br><br><br>
+<div class="art">
+    <article>
+        <h2>OUR MISSION</h2>
+        <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. <br>Nemo, voluptas in minus modi facilis sequi tenetur soluta <br> eum qui recusandae vel maxime corporis quod libero dolorum <br>iste perspiciatis,autem voluptatum!</P>
+    </article>
+    <article class="middle">
+        <h3>OUR VISSION</h3>
+        <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. <br>Nemo, voluptas in minus modi facilis sequi tenetur soluta <br>eum qui recusandae vel maxime corporis quod libero dolorum <br>iste perspiciatis,autem voluptatum!</P>
+    </article>
+    <article>
+        <h2>TEAM</h2>
+        <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. <br>Nemo, voluptas in minus modi facilis sequi tenetur soluta <br> eum qui recusandae vel maxime corporis quod libero dolorum <br>iste perspiciatis,autem voluptatum!</P>
+    </article>
+</div>
+
 </body>
 </html>
