I added services menu

--- a/index.html
+++ b/index.html
@@ -115,6 +115,16 @@ const swiper = new Swiper('.swiper', {
         <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. <br>Nemo, voluptas in minus modi facilis sequi tenetur soluta <br> eum qui recusandae vel maxime corporis quod libero dolorum <br>iste perspiciatis,autem voluptatum!</P>
     </article>
 </div>
+    <div class="wrapper">
+        <h4>OUR SERVICES</h4>
+        <div>
+            <img src="images/clip3.jpg">
+            <img src="images/clip2.jpg">
+            <img src="images/clip3.jpg">
+            <img src="images/clip2.jpg">
+            <img src="images/clip2.jpg">
+        </div>
+    </div>
 
 </body>
 </html>
