--- a/index.html
+++ b/index.html
@@ -104,11 +104,11 @@ const swiper = new Swiper('.swiper', {
 <div class="art">
     <article>
         <h2>OUR MISSION</h2>
-        <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. <br>Nemo, voluptas in minus modi facilis sequi tenetur soluta <br> eum qui recusandae vel maxime corporis quod libero dolorum <br>iste perspiciatis,autem voluptatum!</P>
+        <P>By efficiently applying Electronic Medical Records in the Centre, the EMR Unit shall reduce patient waiting time, ensure data quality and security and block all financial leakages.</P>
     </article>
     <article class="middle">
         <h3>OUR VISSION</h3>
-        <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. <br>Nemo, voluptas in minus modi facilis sequi tenetur soluta <br>eum qui recusandae vel maxime corporis quod libero dolorum <br>iste perspiciatis,autem voluptatum!</P>
+        <P>The EMR Unit aims to provide quality and timely clinical services to patients while boosting revenue generation at Federal Medical Centre in Abeokuta.</P>
     </article>
     <article>
         <h2>TEAM</h2>
@@ -149,9 +149,10 @@ const swiper = new Swiper('.swiper', {
             </div>
             <div class="footer-colomn3">
                     <div class="text-box">
+                    <h7>The office of the Medical Director</h7>
                     <p>
                         Federal Medical Center, Abeokuta. <br>Electronical Medical record. <br>
-                        <a href="">fmca.emrunit@fmcabeokuta.org</a>
+                        <a href=""><i class="fa fa-Email">fmca.emrunit@fmcabeokuta.org</i></a>
                     </p>
 
                     </div>
@@ -176,6 +177,7 @@ const swiper = new Swiper('.swiper', {
                     <a href=""><i class="fa fa-google"></i></a>
                     <a href=""><i class="fa fa-twitter"></i></a>
                     <a href=""><i class="fa fa-youtube"></i></a>
+                    <a href=""><i class="fa fa-In"></i></a>
                 </div>
             </div>
         </div>
