added footer logo

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 <div class="swiper-wrapper">
                   <!-- Slides -->
                   <div class="swiper-slide"><img src="images/b1-1.jpg  "></div>
-                  <div class="swiper-slide"><img src="images/slider2.jpg"></div>
+                  <div class="swiper-slide"><img src="images/emrpic.jpg"></div>
                   <div class="swiper-slide"><img src="images/slider3.jpg" ></div> 
             </div>
                 <!-- If we need pagination -->
@@ -141,7 +141,9 @@ const swiper = new Swiper('.swiper', {
         <div class="row">
             <div class="footer-colomn">
                 <div class="logol">
-                    <img src="images/logo.png" alt="">
+                    <img src="images/logo1.png" alt="">
+                    <br><br>
+                    <p>Olabisi Onabanjo Way, (P.M.B 3031, Sapon) Abeokuta, Ogun State, Nigeria.</p>
 
 
                 </div>
@@ -170,14 +172,14 @@ const swiper = new Swiper('.swiper', {
             <hr>
             <div class="row">
                     <div class="col">
-                        <p>&#169; 2024 lafiness. All Right Reserved.</p>
+                        <p>&#169; 2024 lafinessTech. All Right Reserved.</p>
                     </div>
                 <div class="socialIcons">
                     <a href=""><i class="fa fa-facebook"></i></a>
                     <a href=""><i class="fa fa-google"></i></a>
                     <a href=""><i class="fa fa-twitter"></i></a>
                     <a href=""><i class="fa fa-youtube"></i></a>
-                    <a href=""><i class="fa fa-In"></i></a>
+                    <a href="https://www.instagram.com/fmcaemr?igsh=MThxenFvOHAyc3Q1ag==" target="_blank"><i class="fa fa-instagram"></i></a>
                 </div>
             </div>
         </div>
