--- a/index.html
+++ b/index.html
@@ -112,7 +112,8 @@ const swiper = new Swiper('.swiper', {
     </article>
     <article>
         <h2>TEAM</h2>
-        <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. <br>Nemo, voluptas in minus modi facilis sequi tenetur soluta <br> eum qui recusandae vel maxime corporis quod libero dolorum <br>iste perspiciatis,autem voluptatum!</P>
+        <P>Dedicated team of healthcare professionals, passionate about optimizing patient care through efficient and secure electronic medical records (EMR). We possess diverse expertise in system administration and technical support to maximize EMR utilization..
+        </P>
     </article>
 </div>
 <div class="wrapper">
@@ -141,7 +142,7 @@ const swiper = new Swiper('.swiper', {
         <div class="row">
             <div class="footer-colomn">
                 <div class="logol">
-                    <h7>CONTACT INFORMATION</h7><br><br>
+                    <h7>CONTACT INFORMATION</h7><br><br><br>
                     <p>
                         Email:  fmca.emrunit@fmcabeokuta.org <br><br>
                         Complaints Center(Text messages only): <br><br>
