chaged appoitment image

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@ const swiper = new Swiper('.swiper', {
                 <h5>INSTANT SERVICES</h5>
             </article>
             <article>
-                <img src="images/clip2.jpg">
+                <img src="images/appoitmenti.jpg">
                 <h5>APPOINTMENT</h5>
             </article>
             <article>
